@@ -48,6 +48,6 @@
   that (1) handles any low / high, and (2) segments.  Take segment_primes
   from XS.xs to do this.
 
-- Do in-place merge in new phi(x,a).
-
 - Implement S2 calculation for LMO prime count.
+
+- Balance memory used in phi with memory for binary search pc in lehmer.
