@@ -23,13 +23,18 @@ Revision history for Perl extension Math::Prime::Util.
 
     - Start on Lagarias-Miller-Odlyzko prime count.
 
+    - A new data structure for the phi(x,a) function used by all the fast
+      prime count routines.  Quite a bit faster and most importantly, uses
+      half the memory of the old structure.
+
     - Performance:
        - Divisor sum with no sub is ~10x faster.
        - Speed up PP version of exp_mangoldt, create XS version.
        - Zeta much faster as mentioned above.
        - faster nth_prime as mentioned above.
        - AKS about 10% faster.
-       - New data structure for phi(x,a) means even faster prime_count.
+       - Unroll a little more in sieve inner loop.  A couple percent faster.
+       - Faster prime_count and nth_prime due to new phi(x,a) (about 1.25x).
 
 0.22 26 February 2013
 
